; ModuleID = '/home/carl/AnghaBench/libgit2/tests/remote/extr_create.c_test_remote_create__with_fetchspec.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/remote/extr_create.c_test_remote_create__with_fetchspec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8**, i64 }

@_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"remote\\.\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"test-new\00", align 1
@.str.2 = private unnamed_addr constant [33 x i8] c"git://github.com/libgit2/libgit2\00", align 1
@.str.3 = private unnamed_addr constant [15 x i8] c"+refs/*:refs/*\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_remote_create__with_fetchspec() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.TYPE_4__, align 8
  %3 = alloca i64, align 8
  %4 = load i32, i32* @_repo, align 4
  %5 = call i64 @count_config_entries_match(i32 %4, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  store i64 %5, i64* %3, align 8
  %6 = load i32, i32* @_repo, align 4
  %7 = call i32 @git_remote_create_with_fetchspec(i32** %1, i32 %6, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0))
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32*, i32** %1, align 8
  %10 = call i8* @git_remote_name(i32* %9)
  %11 = call i32 @cl_assert_equal_s(i8* %10, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %12 = load i32*, i32** %1, align 8
  %13 = call i8* @git_remote_url(i32* %12)
  %14 = call i32 @cl_assert_equal_s(i8* %13, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.2, i64 0, i64 0))
  %15 = load i32*, i32** %1, align 8
  %16 = call i32 @git_remote_owner(i32* %15)
  %17 = load i32, i32* @_repo, align 4
  %18 = call i32 @cl_assert_equal_p(i32 %16, i32 %17)
  %19 = load i32*, i32** %1, align 8
  %20 = call i32 @git_remote_get_fetch_refspecs(%struct.TYPE_4__* %2, i32* %19)
  %21 = call i32 @cl_git_pass(i32 %20)
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  %23 = load i8**, i8*** %22, align 8
  %24 = getelementptr inbounds i8*, i8** %23, i64 0
  %25 = load i8*, i8** %24, align 8
  %26 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0), i8* %25)
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 1
  %28 = load i64, i64* %27, align 8
  %29 = call i32 @cl_assert_equal_i(i64 1, i64 %28)
  %30 = load i64, i64* %3, align 8
  %31 = add i64 %30, 2
  %32 = load i32, i32* @_repo, align 4
  %33 = call i64 @count_config_entries_match(i32 %32, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %34 = call i32 @cl_assert_equal_i(i64 %31, i64 %33)
  %35 = call i32 @git_strarray_free(%struct.TYPE_4__* %2)
  %36 = load i32*, i32** %1, align 8
  %37 = call i32 @git_remote_free(i32* %36)
  ret void
}

declare dso_local i64 @count_config_entries_match(i32, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_remote_create_with_fetchspec(i32**, i32, i8*, i8*, i8*) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i8*) #1

declare dso_local i8* @git_remote_name(i32*) #1

declare dso_local i8* @git_remote_url(i32*) #1

declare dso_local i32 @cl_assert_equal_p(i32, i32) #1

declare dso_local i32 @git_remote_owner(i32*) #1

declare dso_local i32 @git_remote_get_fetch_refspecs(%struct.TYPE_4__*, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i64, i64) #1

declare dso_local i32 @git_strarray_free(%struct.TYPE_4__*) #1

declare dso_local i32 @git_remote_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
